# documentation-projet-ia

./: .gitignore  eda-salaires-2304.ipynb  eda-salaires.ipynb  model_card_industry.yml  model_card_salary.yml  pyproject.toml
data/: datacard.yml
