[project]
name = "projet-edf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "keras>=3.14.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.0.0",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=2.0.1,<3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
    "xlrd>=2.0.1",
    "openpyxl>=3.1.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]
